# agent-with-u

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_all.bat  dev-start.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  run_main.bat  test_agent_auth.py  test_async_sdk.py  test_async_sdk2.py  test_connection.py  test_skip_permission_flow.py  test_stream.py  verify_pyimport.py  ws_main_entry.py
.claude/: settings.local.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: pcm-worklet.js
frontend/src/: App.tsx  api.ts  main.tsx  vite-env.d.ts
frontend/src/components/: BackendManager.tsx  ChatInput.tsx  ConstraintsEditor.tsx  DiffView.tsx  ImagePreview.tsx  MessageBubble.tsx  PermissionGate.tsx  RepoPanel.tsx  ScratchPad.tsx  SessionThemeEditor.tsx  Settings.tsx  Sidebar.tsx  SkillManager.tsx  VoiceInput.tsx
frontend/src/hooks/: useChat.ts  useClipboardImage.ts  useConfig.ts  useSlashCommands.ts  useStreamState.ts
frontend/src/utils/: diff.ts  hljsThemes.ts  markdown.ts
skills/: football-search-1.0.0.awu
skills/football-search/: SKILL.md  call.py  manifest.json  secrets.schema.json
src/: _version.py  main.py  types.py  ws_main.py  ws_main_entry.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  scratchpad.json
src-tauri/src/: lib.rs  main.rs
src/backend/: anthropic_api.py  app_config_store.py  backend_store.py  backends.py  base.py  bridge.py  bridge_ws.py  claude_agent.py  claude_code.py  clipboard.py  dashscope_image.py  factory.py  instance_manager.py  mcp_skill_server.py  openai_compat.py  prompt_store.py  session_store.py  skill_store.py  stt_service.py  web_search.py
src/gui/: main_window.py
