[project]
name = "claude-shell"
version = "0.1.0"
description = "Enhanced Claude Code frontend — clipboard image paste, rich UI, multi-model switching, session management"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "claude-agent-sdk>=0.1.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
claude-shell = "src.main:main"
