[project]
name = "agent-with-u"
version = "0.1.0"
description = "AgentWithU — clipboard image paste, rich UI, multi-model switching, session management"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "claude-agent-sdk>=0.1.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
agent-with-u = "src.main:main"
