[package]
name = "agent-with-u"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "AgentWithU"
identifier = "com.agentwith.u"
icon = ["icons/icon.ico"]

[lib]
name = "agent_with_u_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
